# mesa-shipping-sim

./: .gitignore  README.md  pyproject.toml
configs/: base.toml  high_carbon_price.toml
renewable-fuel-abm/: .gitignore  README.md
scripts/: run_simulation.py
src/mesa/: __init__.py  agent.py  datacollection.py  model.py  time.py
src/renewable_fuel_abm/: __init__.py  agents.py  market.py  metrics.py  model.py  policy.py  scenario.py
tests/: test_agents.py  test_model.py
