[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renewable-fuel-abm"
version = "0.1.0"
description = "Mesa-based shipping fuel competition simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ABM Team" }]
dependencies = [
  "mesa>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
